[package]
name = "acumen"
version = "0.0.3"
edition = "2024"
license = "Apache-2.0"
description = "Collect info about your system"
authors = ["Matilde Morrone <contact@morrone.dev>"]
readme = "README.md"
documentation = "https://docs.rs/acumen"
repository = "https://github.com/morr0ne/acumen"
include = ["src/**/*.rs", "README.md", "LICENSE"]

[dependencies]
rustix = { version = "1.0.7", features = ["process"] }
